# pico-tiny-starter-kit

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  makefile  test.mk
script/: suppress-jlink-edu-popup.lua
src/: heartbeat.c  heartbeat.h  main.c  tiny_i2c.c  tiny_i2c.h  tiny_spi.c  tiny_spi.h  tiny_time_source.c  tiny_time_source.h
src/dummy/: dummy.c  dummy.h
test/dummy/: dummy_test.cpp
tools/: debug.cfg  erase.cfg  upload-debug.cfg  upload-release.cfg
